materials/Treća godina/PPJ/Vežbe/Rokovi/feb2021/v2/parser.output
Grammar

    0 $accept: program $end

    1 program: program naredba '\n'
    2        | naredba '\n'

    3 naredba: ID DODELA izraz
    4        | PRINT '(' izraz ')'
    5        | LIST_ID DODELA LIST '(' lista ')'

    6 izraz: DEF izraz
    7      | '(' '<' num ',' num '>' ',' '<' num ',' num '>' ')'
    8      | izraz '+' izraz
    9      | izraz '-' izraz
   10      | '-' izraz
   11      | '(' izraz ')'
   12      | num '*' izraz
   13      | izraz '*' num
   14      | SIM '(' izraz ')'
   15      | REFX '(' izraz ')'
   16      | REFY '(' izraz ')'
   17      | ROT '(' izraz ',' num ')'
   18      | LIST_ID '[' BROJ ']'
   19      | ID

   20 num: BROJ
   21    | ANGLE '(' izraz ',' izraz ')'
   22    | '|' izraz '|'

   23 lista: lista ',' izraz
   24      | izraz


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 1 2
    '(' (40) 4 5 7 11 14 15 16 17 21
    ')' (41) 4 5 7 11 14 15 16 17 21
    '*' (42) 12 13
    '+' (43) 8
    ',' (44) 7 17 21 23
    '-' (45) 9 10
    '<' (60) 7
    '>' (62) 7
    '[' (91) 18
    ']' (93) 18
    '|' (124) 22
    error (256)
    UMINUS (258)
    BROJ <d> (259) 18 20
    ID <s> (260) 3 19
    LIST_ID <s> (261) 5 18
    DODELA (262) 3 5
    DEF (263) 6
    PRINT (264) 4
    SIM (265) 14
    REFX (266) 15
    REFY (267) 16
    ROT (268) 17
    ANGLE (269) 21
    LIST (270) 5


Nonterminals, with rules where they appear

    $accept (28)
        on left: 0
    program (29)
        on left: 1 2
        on right: 0 1
    naredba (30)
        on left: 3 4 5
        on right: 1 2
    izraz <v> (31)
        on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19
        on right: 3 4 6 8 9 10 11 12 13 14 15 16 17 21 22 23 24
    num <d> (32)
        on left: 20 21 22
        on right: 7 12 13 17
    lista <vek> (33)
        on left: 23 24
        on right: 5 23


State 0

    0 $accept: • program $end

    ID       shift, and go to state 1
    LIST_ID  shift, and go to state 2
    PRINT    shift, and go to state 3

    program  go to state 4
    naredba  go to state 5


State 1

    3 naredba: ID • DODELA izraz

    DODELA  shift, and go to state 6


State 2

    5 naredba: LIST_ID • DODELA LIST '(' lista ')'

    DODELA  shift, and go to state 7


State 3

    4 naredba: PRINT • '(' izraz ')'

    '('  shift, and go to state 8


State 4

    0 $accept: program • $end
    1 program: program • naredba '\n'

    $end     shift, and go to state 9
    ID       shift, and go to state 1
    LIST_ID  shift, and go to state 2
    PRINT    shift, and go to state 3

    naredba  go to state 10


State 5

    2 program: naredba • '\n'

    '\n'  shift, and go to state 11


State 6

    3 naredba: ID DODELA • izraz

    '-'      shift, and go to state 12
    BROJ     shift, and go to state 13
    ID       shift, and go to state 14
    LIST_ID  shift, and go to state 15
    DEF      shift, and go to state 16
    SIM      shift, and go to state 17
    REFX     shift, and go to state 18
    REFY     shift, and go to state 19
    ROT      shift, and go to state 20
    ANGLE    shift, and go to state 21
    '('      shift, and go to state 22
    '|'      shift, and go to state 23

    izraz  go to state 24
    num    go to state 25


State 7

    5 naredba: LIST_ID DODELA • LIST '(' lista ')'

    LIST  shift, and go to state 26


State 8

    4 naredba: PRINT '(' • izraz ')'

    '-'      shift, and go to state 12
    BROJ     shift, and go to state 13
    ID       shift, and go to state 14
    LIST_ID  shift, and go to state 15
    DEF      shift, and go to state 16
    SIM      shift, and go to state 17
    REFX     shift, and go to state 18
    REFY     shift, and go to state 19
    ROT      shift, and go to state 20
    ANGLE    shift, and go to state 21
    '('      shift, and go to state 22
    '|'      shift, and go to state 23

    izraz  go to state 27
    num    go to state 25


State 9

    0 $accept: program $end •

    $default  accept


State 10

    1 program: program naredba • '\n'

    '\n'  shift, and go to state 28


State 11

    2 program: naredba '\n' •

    $default  reduce using rule 2 (program)


State 12

   10 izraz: '-' • izraz

    '-'      shift, and go to state 12
    BROJ     shift, and go to state 13
    ID       shift, and go to state 14
    LIST_ID  shift, and go to state 15
    DEF      shift, and go to state 16
    SIM      shift, and go to state 17
    REFX     shift, and go to state 18
    REFY     shift, and go to state 19
    ROT      shift, and go to state 20
    ANGLE    shift, and go to state 21
    '('      shift, and go to state 22
    '|'      shift, and go to state 23

    izraz  go to state 29
    num    go to state 25


State 13

   20 num: BROJ •

    $default  reduce using rule 20 (num)


State 14

   19 izraz: ID •

    $default  reduce using rule 19 (izraz)


State 15

   18 izraz: LIST_ID • '[' BROJ ']'

    '['  shift, and go to state 30


State 16

    6 izraz: DEF • izraz

    '-'      shift, and go to state 12
    BROJ     shift, and go to state 13
    ID       shift, and go to state 14
    LIST_ID  shift, and go to state 15
    DEF      shift, and go to state 16
    SIM      shift, and go to state 17
    REFX     shift, and go to state 18
    REFY     shift, and go to state 19
    ROT      shift, and go to state 20
    ANGLE    shift, and go to state 21
    '('      shift, and go to state 22
    '|'      shift, and go to state 23

    izraz  go to state 31
    num    go to state 25


State 17

   14 izraz: SIM • '(' izraz ')'

    '('  shift, and go to state 32


State 18

   15 izraz: REFX • '(' izraz ')'

    '('  shift, and go to state 33


State 19

   16 izraz: REFY • '(' izraz ')'

    '('  shift, and go to state 34


State 20

   17 izraz: ROT • '(' izraz ',' num ')'

    '('  shift, and go to state 35


State 21

   21 num: ANGLE • '(' izraz ',' izraz ')'

    '('  shift, and go to state 36


State 22

    7 izraz: '(' • '<' num ',' num '>' ',' '<' num ',' num '>' ')'
   11      | '(' • izraz ')'

    '-'      shift, and go to state 12
    BROJ     shift, and go to state 13
    ID       shift, and go to state 14
    LIST_ID  shift, and go to state 15
    DEF      shift, and go to state 16
    SIM      shift, and go to state 17
    REFX     shift, and go to state 18
    REFY     shift, and go to state 19
    ROT      shift, and go to state 20
    ANGLE    shift, and go to state 21
    '('      shift, and go to state 22
    '<'      shift, and go to state 37
    '|'      shift, and go to state 23

    izraz  go to state 38
    num    go to state 25


State 23

   22 num: '|' • izraz '|'

    '-'      shift, and go to state 12
    BROJ     shift, and go to state 13
    ID       shift, and go to state 14
    LIST_ID  shift, and go to state 15
    DEF      shift, and go to state 16
    SIM      shift, and go to state 17
    REFX     shift, and go to state 18
    REFY     shift, and go to state 19
    ROT      shift, and go to state 20
    ANGLE    shift, and go to state 21
    '('      shift, and go to state 22
    '|'      shift, and go to state 23

    izraz  go to state 39
    num    go to state 25


State 24

    3 naredba: ID DODELA izraz •
    8 izraz: izraz • '+' izraz
    9      | izraz • '-' izraz
   13      | izraz • '*' num

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42

    $default  reduce using rule 3 (naredba)


State 25

   12 izraz: num • '*' izraz

    '*'  shift, and go to state 43


State 26

    5 naredba: LIST_ID DODELA LIST • '(' lista ')'

    '('  shift, and go to state 44


State 27

    4 naredba: PRINT '(' izraz • ')'
    8 izraz: izraz • '+' izraz
    9      | izraz • '-' izraz
   13      | izraz • '*' num

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    ')'  shift, and go to state 45


State 28

    1 program: program naredba '\n' •

    $default  reduce using rule 1 (program)


State 29

    8 izraz: izraz • '+' izraz
    9      | izraz • '-' izraz
   10      | '-' izraz •
   13      | izraz • '*' num

    $default  reduce using rule 10 (izraz)


State 30

   18 izraz: LIST_ID '[' • BROJ ']'

    BROJ  shift, and go to state 46


State 31

    6 izraz: DEF izraz •
    8      | izraz • '+' izraz
    9      | izraz • '-' izraz
   13      | izraz • '*' num

    $default  reduce using rule 6 (izraz)


State 32

   14 izraz: SIM '(' • izraz ')'

    '-'      shift, and go to state 12
    BROJ     shift, and go to state 13
    ID       shift, and go to state 14
    LIST_ID  shift, and go to state 15
    DEF      shift, and go to state 16
    SIM      shift, and go to state 17
    REFX     shift, and go to state 18
    REFY     shift, and go to state 19
    ROT      shift, and go to state 20
    ANGLE    shift, and go to state 21
    '('      shift, and go to state 22
    '|'      shift, and go to state 23

    izraz  go to state 47
    num    go to state 25


State 33

   15 izraz: REFX '(' • izraz ')'

    '-'      shift, and go to state 12
    BROJ     shift, and go to state 13
    ID       shift, and go to state 14
    LIST_ID  shift, and go to state 15
    DEF      shift, and go to state 16
    SIM      shift, and go to state 17
    REFX     shift, and go to state 18
    REFY     shift, and go to state 19
    ROT      shift, and go to state 20
    ANGLE    shift, and go to state 21
    '('      shift, and go to state 22
    '|'      shift, and go to state 23

    izraz  go to state 48
    num    go to state 25


State 34

   16 izraz: REFY '(' • izraz ')'

    '-'      shift, and go to state 12
    BROJ     shift, and go to state 13
    ID       shift, and go to state 14
    LIST_ID  shift, and go to state 15
    DEF      shift, and go to state 16
    SIM      shift, and go to state 17
    REFX     shift, and go to state 18
    REFY     shift, and go to state 19
    ROT      shift, and go to state 20
    ANGLE    shift, and go to state 21
    '('      shift, and go to state 22
    '|'      shift, and go to state 23

    izraz  go to state 49
    num    go to state 25


State 35

   17 izraz: ROT '(' • izraz ',' num ')'

    '-'      shift, and go to state 12
    BROJ     shift, and go to state 13
    ID       shift, and go to state 14
    LIST_ID  shift, and go to state 15
    DEF      shift, and go to state 16
    SIM      shift, and go to state 17
    REFX     shift, and go to state 18
    REFY     shift, and go to state 19
    ROT      shift, and go to state 20
    ANGLE    shift, and go to state 21
    '('      shift, and go to state 22
    '|'      shift, and go to state 23

    izraz  go to state 50
    num    go to state 25


State 36

   21 num: ANGLE '(' • izraz ',' izraz ')'

    '-'      shift, and go to state 12
    BROJ     shift, and go to state 13
    ID       shift, and go to state 14
    LIST_ID  shift, and go to state 15
    DEF      shift, and go to state 16
    SIM      shift, and go to state 17
    REFX     shift, and go to state 18
    REFY     shift, and go to state 19
    ROT      shift, and go to state 20
    ANGLE    shift, and go to state 21
    '('      shift, and go to state 22
    '|'      shift, and go to state 23

    izraz  go to state 51
    num    go to state 25


State 37

    7 izraz: '(' '<' • num ',' num '>' ',' '<' num ',' num '>' ')'

    BROJ   shift, and go to state 13
    ANGLE  shift, and go to state 21
    '|'    shift, and go to state 23

    num  go to state 52


State 38

    8 izraz: izraz • '+' izraz
    9      | izraz • '-' izraz
   11      | '(' izraz • ')'
   13      | izraz • '*' num

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    ')'  shift, and go to state 53


State 39

    8 izraz: izraz • '+' izraz
    9      | izraz • '-' izraz
   13      | izraz • '*' num
   22 num: '|' izraz • '|'

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    '|'  shift, and go to state 54


State 40

    8 izraz: izraz '+' • izraz

    '-'      shift, and go to state 12
    BROJ     shift, and go to state 13
    ID       shift, and go to state 14
    LIST_ID  shift, and go to state 15
    DEF      shift, and go to state 16
    SIM      shift, and go to state 17
    REFX     shift, and go to state 18
    REFY     shift, and go to state 19
    ROT      shift, and go to state 20
    ANGLE    shift, and go to state 21
    '('      shift, and go to state 22
    '|'      shift, and go to state 23

    izraz  go to state 55
    num    go to state 25


State 41

    9 izraz: izraz '-' • izraz

    '-'      shift, and go to state 12
    BROJ     shift, and go to state 13
    ID       shift, and go to state 14
    LIST_ID  shift, and go to state 15
    DEF      shift, and go to state 16
    SIM      shift, and go to state 17
    REFX     shift, and go to state 18
    REFY     shift, and go to state 19
    ROT      shift, and go to state 20
    ANGLE    shift, and go to state 21
    '('      shift, and go to state 22
    '|'      shift, and go to state 23

    izraz  go to state 56
    num    go to state 25


State 42

   13 izraz: izraz '*' • num

    BROJ   shift, and go to state 13
    ANGLE  shift, and go to state 21
    '|'    shift, and go to state 23

    num  go to state 57


State 43

   12 izraz: num '*' • izraz

    '-'      shift, and go to state 12
    BROJ     shift, and go to state 13
    ID       shift, and go to state 14
    LIST_ID  shift, and go to state 15
    DEF      shift, and go to state 16
    SIM      shift, and go to state 17
    REFX     shift, and go to state 18
    REFY     shift, and go to state 19
    ROT      shift, and go to state 20
    ANGLE    shift, and go to state 21
    '('      shift, and go to state 22
    '|'      shift, and go to state 23

    izraz  go to state 58
    num    go to state 25


State 44

    5 naredba: LIST_ID DODELA LIST '(' • lista ')'

    '-'      shift, and go to state 12
    BROJ     shift, and go to state 13
    ID       shift, and go to state 14
    LIST_ID  shift, and go to state 15
    DEF      shift, and go to state 16
    SIM      shift, and go to state 17
    REFX     shift, and go to state 18
    REFY     shift, and go to state 19
    ROT      shift, and go to state 20
    ANGLE    shift, and go to state 21
    '('      shift, and go to state 22
    '|'      shift, and go to state 23

    izraz  go to state 59
    num    go to state 25
    lista  go to state 60


State 45

    4 naredba: PRINT '(' izraz ')' •

    $default  reduce using rule 4 (naredba)


State 46

   18 izraz: LIST_ID '[' BROJ • ']'

    ']'  shift, and go to state 61


State 47

    8 izraz: izraz • '+' izraz
    9      | izraz • '-' izraz
   13      | izraz • '*' num
   14      | SIM '(' izraz • ')'

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    ')'  shift, and go to state 62


State 48

    8 izraz: izraz • '+' izraz
    9      | izraz • '-' izraz
   13      | izraz • '*' num
   15      | REFX '(' izraz • ')'

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    ')'  shift, and go to state 63


State 49

    8 izraz: izraz • '+' izraz
    9      | izraz • '-' izraz
   13      | izraz • '*' num
   16      | REFY '(' izraz • ')'

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    ')'  shift, and go to state 64


State 50

    8 izraz: izraz • '+' izraz
    9      | izraz • '-' izraz
   13      | izraz • '*' num
   17      | ROT '(' izraz • ',' num ')'

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    ','  shift, and go to state 65


State 51

    8 izraz: izraz • '+' izraz
    9      | izraz • '-' izraz
   13      | izraz • '*' num
   21 num: ANGLE '(' izraz • ',' izraz ')'

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    ','  shift, and go to state 66


State 52

    7 izraz: '(' '<' num • ',' num '>' ',' '<' num ',' num '>' ')'

    ','  shift, and go to state 67


State 53

   11 izraz: '(' izraz ')' •

    $default  reduce using rule 11 (izraz)


State 54

   22 num: '|' izraz '|' •

    $default  reduce using rule 22 (num)


State 55

    8 izraz: izraz • '+' izraz
    8      | izraz '+' izraz •
    9      | izraz • '-' izraz
   13      | izraz • '*' num

    '*'  shift, and go to state 42

    $default  reduce using rule 8 (izraz)


State 56

    8 izraz: izraz • '+' izraz
    9      | izraz • '-' izraz
    9      | izraz '-' izraz •
   13      | izraz • '*' num

    '*'  shift, and go to state 42

    $default  reduce using rule 9 (izraz)


State 57

   13 izraz: izraz '*' num •

    $default  reduce using rule 13 (izraz)


State 58

    8 izraz: izraz • '+' izraz
    9      | izraz • '-' izraz
   12      | num '*' izraz •
   13      | izraz • '*' num

    $default  reduce using rule 12 (izraz)


State 59

    8 izraz: izraz • '+' izraz
    9      | izraz • '-' izraz
   13      | izraz • '*' num
   24 lista: izraz •

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42

    $default  reduce using rule 24 (lista)


State 60

    5 naredba: LIST_ID DODELA LIST '(' lista • ')'
   23 lista: lista • ',' izraz

    ')'  shift, and go to state 68
    ','  shift, and go to state 69


State 61

   18 izraz: LIST_ID '[' BROJ ']' •

    $default  reduce using rule 18 (izraz)


State 62

   14 izraz: SIM '(' izraz ')' •

    $default  reduce using rule 14 (izraz)


State 63

   15 izraz: REFX '(' izraz ')' •

    $default  reduce using rule 15 (izraz)


State 64

   16 izraz: REFY '(' izraz ')' •

    $default  reduce using rule 16 (izraz)


State 65

   17 izraz: ROT '(' izraz ',' • num ')'

    BROJ   shift, and go to state 13
    ANGLE  shift, and go to state 21
    '|'    shift, and go to state 23

    num  go to state 70


State 66

   21 num: ANGLE '(' izraz ',' • izraz ')'

    '-'      shift, and go to state 12
    BROJ     shift, and go to state 13
    ID       shift, and go to state 14
    LIST_ID  shift, and go to state 15
    DEF      shift, and go to state 16
    SIM      shift, and go to state 17
    REFX     shift, and go to state 18
    REFY     shift, and go to state 19
    ROT      shift, and go to state 20
    ANGLE    shift, and go to state 21
    '('      shift, and go to state 22
    '|'      shift, and go to state 23

    izraz  go to state 71
    num    go to state 25


State 67

    7 izraz: '(' '<' num ',' • num '>' ',' '<' num ',' num '>' ')'

    BROJ   shift, and go to state 13
    ANGLE  shift, and go to state 21
    '|'    shift, and go to state 23

    num  go to state 72


State 68

    5 naredba: LIST_ID DODELA LIST '(' lista ')' •

    $default  reduce using rule 5 (naredba)


State 69

   23 lista: lista ',' • izraz

    '-'      shift, and go to state 12
    BROJ     shift, and go to state 13
    ID       shift, and go to state 14
    LIST_ID  shift, and go to state 15
    DEF      shift, and go to state 16
    SIM      shift, and go to state 17
    REFX     shift, and go to state 18
    REFY     shift, and go to state 19
    ROT      shift, and go to state 20
    ANGLE    shift, and go to state 21
    '('      shift, and go to state 22
    '|'      shift, and go to state 23

    izraz  go to state 73
    num    go to state 25


State 70

   17 izraz: ROT '(' izraz ',' num • ')'

    ')'  shift, and go to state 74


State 71

    8 izraz: izraz • '+' izraz
    9      | izraz • '-' izraz
   13      | izraz • '*' num
   21 num: ANGLE '(' izraz ',' izraz • ')'

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42
    ')'  shift, and go to state 75


State 72

    7 izraz: '(' '<' num ',' num • '>' ',' '<' num ',' num '>' ')'

    '>'  shift, and go to state 76


State 73

    8 izraz: izraz • '+' izraz
    9      | izraz • '-' izraz
   13      | izraz • '*' num
   23 lista: lista ',' izraz •

    '+'  shift, and go to state 40
    '-'  shift, and go to state 41
    '*'  shift, and go to state 42

    $default  reduce using rule 23 (lista)


State 74

   17 izraz: ROT '(' izraz ',' num ')' •

    $default  reduce using rule 17 (izraz)


State 75

   21 num: ANGLE '(' izraz ',' izraz ')' •

    $default  reduce using rule 21 (num)


State 76

    7 izraz: '(' '<' num ',' num '>' • ',' '<' num ',' num '>' ')'

    ','  shift, and go to state 77


State 77

    7 izraz: '(' '<' num ',' num '>' ',' • '<' num ',' num '>' ')'

    '<'  shift, and go to state 78


State 78

    7 izraz: '(' '<' num ',' num '>' ',' '<' • num ',' num '>' ')'

    BROJ   shift, and go to state 13
    ANGLE  shift, and go to state 21
    '|'    shift, and go to state 23

    num  go to state 79


State 79

    7 izraz: '(' '<' num ',' num '>' ',' '<' num • ',' num '>' ')'

    ','  shift, and go to state 80


State 80

    7 izraz: '(' '<' num ',' num '>' ',' '<' num ',' • num '>' ')'

    BROJ   shift, and go to state 13
    ANGLE  shift, and go to state 21
    '|'    shift, and go to state 23

    num  go to state 81


State 81

    7 izraz: '(' '<' num ',' num '>' ',' '<' num ',' num • '>' ')'

    '>'  shift, and go to state 82


State 82

    7 izraz: '(' '<' num ',' num '>' ',' '<' num ',' num '>' • ')'

    ')'  shift, and go to state 83


State 83

    7 izraz: '(' '<' num ',' num '>' ',' '<' num ',' num '>' ')' •

    $default  reduce using rule 7 (izraz)
